layout fixes and spacings

--- a/SkillsWorkflow/src/css/custom.css
+++ b/SkillsWorkflow/src/css/custom.css
@@ -21,19 +21,30 @@
   --ifm-font-family-base: 'Varela Round';
   --ifm-font-family-monospace: 'Open Sans';
   --home-text-color: #333333;
+
 }
+
 
 .prism-code.language-json.codeBlock_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock-styles-module.thin-scrollbar {
   color: rgb(191, 199, 213) !important;
   background-color: rgb(255, 255, 255) !important;
   border-radius: 4px !important;
+  margin-top: 30px !important;
+  margin-bottom: 25px !important;
 }
 .codeBlockLines_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock-styles-module {
   background: #efefef;
 }
 
-.token-line {
-  color: rgb(28, 123, 231);
+.token.string {
+  color: rgb(183, 235, 104) !important;
+}
+.token.operator {
+  color: rgb(71, 187, 233);
+}
+
+.span token-line {
+  color: rgb(66, 153, 37) !important;
 }
 
 .menu__list-item {
@@ -113,6 +124,8 @@ h2 {
   font-weight: 600;
   letter-spacing: 1px;
   white-space: normal;
+  margin-bottom: 20px !important;
+  margin-top: 30px !important;
 }
 
 h3 {
@@ -120,6 +133,7 @@ h3 {
   font-size: 20px;
   font-weight: 600;
   color: #333333;
+  margin-bottom: 20px !important;
  
 }
 
@@ -133,7 +147,7 @@ h3 {
 p {
   font-size: 14px !important;
   font-family: 'Open Sans', sans-serif !important;
-  color: #444444;
+  color: #333;
   margin-bottom: 10px !important;
 }
 
